@@ -4,6 +4,10 @@
  * compliance with the BSD 2-Clause License.
  */
 
+// Knex instrumentation exists to capture a more useful span stacktrace at
+// the start of a Knex query, and use that stacktrace on the 'pg' or 'mysql'
+// span.
+
 'use strict'
 
 var semver = require('semver')
@@ -13,6 +17,11 @@ var symbols = require('../../symbols')
 
 module.exports = function (Knex, agent, { version, enabled }) {
   if (!enabled) {
+    return Knex
+  }
+  if (agent._conf.spanStackTraceMinDuration < 0) {
+    agent.logger.trace('not instrumenting knex because not capturing span stack traces (spanStackTraceMinDuration=%s)',
+      agent._conf.spanStackTraceMinDuration)
     return Knex
   }
   if (semver.gte(version, '1.0.0')) {
