@@ -66,6 +66,10 @@ paths are considered for body capture. ({pull}2873[#2873])
 [float]
 ===== Chores
 
+- Disable knex instrumentation when not collecting span stack traces
+  (because there is no point). This is a performance improvement for
+  Knex usage in the default configuration. ({pull}2879[#2879])
+
 
 [[release-notes-3.38.0]]
 ==== 3.38.0 2022/08/11
